# FileManager

./: CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.user.9154c1f  ChooseDirWindow.cpp  ChooseDirWindow.h  DirTreeDelegate.cpp  DirTreeDelegate.h  DirTreeModel.cpp  DirTreeModel.h  ExtendedTreeView.cpp  ExtendedTreeView.h  FileItemDelegate.cpp  FileManager.cpp  FileManager.h  FileManager.qrc  FileManager.sln  FileManager.ui  FileManager.vcxproj  FileManager.vcxproj.filters  FileModel.cpp  FileModel.h  FileModelDelegate.cpp  FileModelDelegate.h  FileModelWorker.cpp  FileModelWorker.h  FilePreviewWidget.cpp  FilePreviewWidget.h  FilePreviewWidget.ui  main.cpp
.github/workflows/: build.yml  msbuild.yml  versioning.yml
Styles/: app.qss
